--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <p id="paragraph"></p>
+    //geting input from user
     <label for="wordsearch">Enter a word to search:</label>
     <input type="text" name="wordsearch" id="wordsearch">
     <div id="result"></div>
